--- a/Paulls/scss/main.scss
+++ b/Paulls/scss/main.scss
@@ -4,237 +4,8 @@
 @import "libs";
 @import "reset";
 
-// Sections and components
-@import "sections/header.scss";
-@import "sections/components.scss";
-@import "sections/footer.scss";
-
-//! Main section
-.main-section {
-    overflow: hidden;
-    position: relative;
-    padding-top: 460px;
-    background-size: cover;
-    background-repeat: no-repeat;
-
-    .smoke-effect {
-        position: absolute;
-        top: 0;
-        left: 50%;
-        transform: translateX(-50%);
-        z-index: 1;
-        max-width: 100%;
-    }
-
-    .logo {
-        position: absolute;
-        z-index: 2;
-        left: 50%;
-        transform: translateX(-50%);
-        top: 30px;
-        max-width: 771px;
-    }
-
-    .produce-block {
-        img {
-            max-width: 100%;
-        }
-        
-        .type-content {
-            margin-top: 95px;
-
-
-            .text, .title {
-                padding: 0 7px;
-            }
-
-            .purple-btn {
-                display: block;
-                margin-top: 75px;
-                padding: 10px 35px;
-            }
-        }
-
-        p {
-            margin-top: 25px;
-        }
-    }
-}
-
-//! Categories section
-.categories-section {
-    margin-top: 108px;
-    padding-bottom: 140px;
-    overflow: hidden;
-
-    .categories {
-        position: relative;
-        box-sizing: border-box;
-        margin: 0 -7.5px;
-        margin-top: 65px;
-        @include flexbox(flex-start, flex-start);
-        flex-wrap: wrap;
-        z-index: 222;
-        background-color: transparent;
-        .category-smoke-effect-1 {
-            position: absolute;
-            top: 40px;
-            right: -100px;
-            z-index: -1;
-        }
-
-        .category-smoke-effect-2 {
-            position: absolute;
-            bottom: 40px;
-            left: -100px;
-            z-index: -1;
-        }
-
-        .category {
-            margin: 15px 7.5px;
-            @include flexbox(flex-start, flex-end);
-            @include box(calc(33.333% - 15px), 475px);
-            background-size: cover;
-            background-repeat: no-repeat;
-            background-position: center center;
-
-            &:hover .category-title {
-                color: #000;
-                background-color: rgba($light-gold, 0.6);
-            }
-        }
-
-        .category-title {
-            display: block;
-            width: 100%;
-            padding: 60px 130px 60px 47px;
-            color: #fff;
-            text-transform: uppercase;
-            font-size: em(20px);
-            background-color: rgba(#050505, 0.6);
-            transition: all .3s ease;
-        }
-    }
-
-    .purple-btn-container {
-        margin-top: 130px; 
-        @include flexbox(center, flex-start);
-    }
-
-    .purple-btn {
-        padding: 13px 75px;
-    }
-}
-
-//! Banner section
-.banner-section {
-    @include flexbox(flex-start, center, column);
-    @include box(100%, 680px);
-    padding: 0 15px;
-    padding-top: 200px;
-    padding-bottom: 320px;
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center center;
-
-    .title {
-        font-size: em(56px);
-    }
-
-    .transparent-btn {
-        margin-top: 50px;
-        padding: 12px 174px;
-    }
-}
-
-//! Advantages section
-.advantages-section {
-    padding-top: 130px;
-    padding-bottom: 70px;
-    background-size: cover;
-    background-repeat: no-repeat;
-
-    .right-block, .left-block {
-        @include flexbox(flex-start, flex-start);
-    }
-
-    .img {
-        max-width: 680px;
-    }
-
-    .content {
-        padding-top: 50px;
-
-        h3 {
-            word-break: break-word;
-            color: #fff;
-            font-size: em(45px);
-        }
-
-        p {
-            margin-top: 20px;
-            color: #fff;
-            font-size: em(20px);
-        }
-    }
-
-    .left-block {
-        position: relative;
-
-        .gold-bird {
-            position: absolute;
-            left: -40px;
-            top: 50px;
-        }
-
-        .content {
-            padding-left: 160px;
-            padding-right: 50px;
-        }
-    }
-
-    .right-block {
-        .content {
-            padding-left: 50px;
-        }
-    }
-}
-
-//! Contacts section
-.contacts-section {
-    width: 100%;
-    padding: 35px 0;
-    background-size: cover;
-    background-repeat: no-repeat;
-
-    .items {
-        margin: 0 -50px;
-        @include flexbox(flex-start, flex-start);
-        flex-wrap: wrap;
-
-        .item {
-            margin: 20px 50px;
-            @include flexbox(flex-start, center);
-            width: calc(33.333% - 100px);
-        }
-
-        .item-text {
-            margin-left: 20px;
-            color: #fff;
-            font-size: em(20px);
-        }
-    }
-}
-
-//! Section map
-.section-map {
-    width: 100%;
-    height: 490px;
-
-    .map {
-        width: 100%;
-        height: 100%;
-    }
-} 
+// Sections
+@import "sections/header";
+@import "sections/components";
 
 @import "media"; // Always at the end
