--- a/Paulls/scss/_media.scss
+++ b/Paulls/scss/_media.scss
@@ -1,239 +1,302 @@
 @import "vars";
 
-
 /*==========  Desktop First  ==========*/
 
 // ≥1200px
 @include media-breakpoint-down(lg) {
-	.advantages-section {
-        padding: 50px 0;
+	//! Header
+	header {
+		.email, .cellphone {
+	    	font-size: em(25px);
+    	}
+	}	
 
-        .img {
-            max-width: 360px !important;
-        }
+	//! Start-banner
+	.start-banner {
+		// Title
+		&__title {
+			margin-top: 80px;
+		}
 
-        .left-block {
-            position: relative;
-    
-            .gold-bird {
-                display: none;
-            }
-    
-            .content {
-                padding-left: 0;
-                padding-right: 0;
-            }
-        }
-    
-        .right-block {
-            .content {
-                padding-left: 0px;
-            }
-        }
-    }
+		.waves, br {
+			display: none;
+		}
+	}
+
+	//! Section card
+	.section-card {
+		// Image
+		.stages-img {
+			max-width: 400px;
+		}
+
+		// Content
+		&-content {
+			max-width: 400px;
+			align-items: flex-start;
+		}
+
+		// Menu
+		&-menu {
+			margin-top: 50px;
+
+			a {
+				font-size: em(50px);
+			}
+		}
+	}
 }
 
 // ≥992px
 @include media-breakpoint-down(md) {
-    header {
-        ul.header-menu li + li {
-            margin-left: 45px;
-        }
-    }
+	//! Header
+	header {
+		.logo img {
+			max-width: 200px;
+		}
 
-    // Main section
-    .main-section {
-        .produce-block .type-content {
-            margin-top: 0;
-        }
+		.email, .cellphone {
+	    	font-size: em(20px);
+    	}
+	}
+	
+	//! Start banner
+	.start-banner {
+		&__title, &-content {
+			max-width: 600px;
+		}
 
-        .logo {
-            width: 95%;
-        }
-    }
+		&__title, &__case {
+			font-size: em(45px);
+		}
 
-    // Categories section
-    .categories-section .categories .category {
-        margin: 15px;
-        width: calc(50% - 30px);
-    }
+		// Case
+		&__case {
+			right: -70px;
+		}
 
+		// Content
+		&-content {
+			padding-left: 30px;
 
-    // Contacts section
-    .contacts-section {
-        .items {
-            .item {
-                width: calc(50% - 100px);
-            }
-        }
-    }
+			p {
+				font-size: em(25px);
+			}
+		} 
+	}
+
+	//! Section-card
+	.section-card {
+		padding: 0 10px;
+		background-image: url('../img/waves-bg2.png');
+		background-repeat-y: no-repeat;
+		background-position: 70% 95%;
+
+		&.right {
+			background-image: url('../img/rounds.png');
+			background-repeat-y: repeat;
+			background-position: center center;
+		}
+
+		// Row
+		.row {
+			padding: 0;
+		}
+
+		// Image
+		.stages-img {
+			margin-top: 20px;
+		}
+
+		// Content
+		&-content {
+			max-width: 100%;
+		}
+
+		// Title
+		h2 {
+			width: 100%;
+			text-align: center;
+			font-size: em(50px);
+		}
+
+		// Menu
+		&-menu {
+			margin-top: 20px;
+			width: 100%;
+			@include flexbox(flex-start, center, column);
+
+			a {
+				position: relative;
+				display: block;
+				width: 100%;
+				text-align: center;
+				font-size: em(30px);
+			}
+
+			i {
+				display: block;
+				position: absolute;
+				top: 50%;
+    			transform: translateY(-50%);
+				right: -30px;
+			}
+		}
+
+		// Submenu
+		&-submenu {
+			top: auto;
+			bottom: 0;
+			@include box(100%, auto);
+			padding: 20px;
+
+			li {
+				position: relative;
+				color: #fff;
+				font-size: em(30px);
+			}
+
+			li + li {
+				margin-top: 25px;
+			}
+		}
+
+		// Right
+		&.right{
+			z-index: 1;
+
+			.robot-img {
+				z-index: -1;
+			}
+		} 
+	} 
 }
 
 // ≥768px
 @include media-breakpoint-down(sm) {
-    // Header
-    header {
-        .content {
-            margin: 0;
-            height: 65px;
-        }
+	//! Header
+	header {
+		padding: 10px 0;
 
-        ul.header-menu {
-            position: absolute;
-            z-index: 777;
-            left: 0;
-            top: 65px;
-            display: none;
-            min-width: 290px;
-            max-width: 300px;
-            height: auto;
-            background-color: rgba(#212121, 0.9);
-        }
+		// Email
+		.email {
+	    	margin: 0 auto;
+		}
+	}
 
-        ul.header-menu li {
-            width: 100%;
-        }
+	//! Start banner
+	.start-banner {
+		background-position: 98%;
 
-        ul.header-menu li a {
-            width: 100%;
-            display: block;
-            padding: 15px 20px;
+		&__title, &-content {
+			max-width: 100%;
+		}
 
-            &:hover {
-                color: #fdd835;
-                background-color: #616161;
-            }
-        }
+		&__title, &__case {
+			font-size: em(40px);
+		}
 
-        ul.header-menu li + li {
-            margin-left: 0;
-        }
+		// Case
+		&__case {
+			left: 0;
+			top: 0;
+			position: relative;
+			display: block;
+			transform: none;
+			margin-top: 30px;
+			text-decoration: underline;
+		} 
 
-        .lang-search .lang {
-            margin-right: 17px;
-        }
+		// Content
+		&-content {
+			p {
+				font-size: em(20px);
+			}
+		}
+	}
 
-        .top-line-empty {
-            height: 65px;
-        }
-    }
-
-    .burger-btn {
-        display: flex;
-    }
-
-    // Purple button
-    .main-section .produce-block .type-content .purple-btn {
-        margin-top: 45px;
-    }
-
-    // Categories section
-    .categories-section{
-        margin-top: 60px;
-
-        .categories {
-            margin: 0;
-            justify-content: center;
-
-            .category {
-                margin: 15px 0;
-                @include box(90%, 360px);
-            }
-        } 
-
-        .purple-btn-container {
-            margin-top: 40px; 
-        }
-    
-        .purple-btn {
-            padding: 13px 15px;
-            word-wrap: normal;
-        }
-    }
-
-    .advantages-section {
-        .img {
-            max-width: 360px !important;
-        }
-
-        .left-block, .right-block {
-            margin-top: 25px;
-            align-items: center;
-        }
-
-        .left-block {
-            flex-direction: column-reverse;
-        }
-
-        .right-block {
-            flex-direction: column;
-        }
-
-        .content {
-            padding-top: 15px;
-
-            h3 {
-                word-break: break-word;
-                color: #fff;
-                font-size: em(35px);
-            }
-        }
-    }
+	//! Section card
+	// Right
+	.section-card.right{
+		z-index: 1;
+		
+		.robot-img {
+			left: 50%;
+			transform: translateX(-50%);
+			max-height: 300px;
+		}
+	}  
 }
 
 // ≥576px
 @include media-breakpoint-down(xs) {
-    .container {
-        padding: 0 10px !important;
-    }
+	//! Header
+	header {
+		.row {
+    		padding: 0 15px;
+    	}
 
-    //! Main section
-    .main-section {
-        padding-top: 0px;
+    	.logo img {
+			max-width: 155px;
+		}
 
-        .smoke-effect {
-            position: static;
-            transform: none;
-            width: 100%;
-            max-width: auto;
-        }
-        
-        .produce-block {
-            margin-top: 30px;
-        }
-    }
+		.email, .cellphone {
+	    	font-size: em(16px);
+    	}
+	}
 
-    //! Banner section
-    .banner-section {
-        justify-content: center;
-        padding: 0 15px;
-        max-height: 480px;
+	//! Start banner
+	.start-banner {
+		background-image: url('../img/waves-bg.png');
+		background-position: left 95%;
+		background-repeat-y: no-repeat;
 
-        .title {
-            font-size: em(36px);
-        }
+		// Title
+		&__title {
+			margin-top: 30px;
+		}
 
-        .transparent-btn {
-            padding: 12px 70px;
-        }
-    }
+		&__title, &-content {
+			max-width: 100%;
+		}
 
-    //! Advantages section
-    .advantages-section {
-        .img {
-            max-width: 200px !important;
-        }
-    }
+		&__title, &__case {
+			font-size: em(25px);
+		}
 
-    //! Contacts section
-    .contacts-section {
-        .items {
-            margin: 0;
+		// Content
+		&-content {
+			p {
+				font-size: em(18px);
+			}
+		}
+	}
 
-            .item {
-                margin: 15px 0;
-                width: 90%;
-            }
-        }
-    }
+	//! Section-card
+	.section-card {
+		// Title
+		h2 {
+			font-size: em(27px);
+		}
+
+		// Image
+		.stages-img {
+			max-width: 250px;
+		}
+
+		&-menu a {
+			font-size: em(20px);
+		}
+
+		&-submenu {
+			li {
+				color: #fff;
+				font-size: em(25px);
+			}
+
+			li + li {
+				margin-top: 20px;
+			}
+		}
+	} 
 }
