--- a/Paulls/scss/_media.scss
+++ b/Paulls/scss/_media.scss
@@ -95,6 +95,7 @@
 		&.right {
 			background-image: url('../img/rounds.png');
 			background-repeat-y: repeat;
+			background-repeat-x: repeat;
 			background-position: center center;
 		}
 
