--- a/Paulls/scss/main.scss
+++ b/Paulls/scss/main.scss
@@ -7,5 +7,6 @@
 // Sections
 @import "sections/header";
 @import "sections/components";
+@import "sections/case-page";
 
 @import "media"; // Always at the end
