--- a/Paulls/scss/_media.scss
+++ b/Paulls/scss/_media.scss
@@ -51,6 +51,21 @@
 		background-size: 100%;
 		background-position: center 10%;
 	} 
+
+	//! Case content
+	.case-content {
+		&__card-block {
+			.text {
+				max-width: 420px;
+				margin-right: 30px;
+			}
+
+			img {
+				max-width: 360px;
+			}
+		}
+	}
+
 }
 
 // ≥992px
@@ -195,6 +210,32 @@
 			display: none;
 		}
 	} 
+
+	//! Case content
+	.case-content {
+		padding: 50px 30px;
+
+		&__title, strong {
+			font-size: em(40px);
+		}
+
+		p {
+			font-size: em(25px);
+		}
+
+		&__card-block {
+			flex-direction: column;
+
+			.text {
+				margin: 0;
+				max-width: 100%;
+			}
+
+			img {
+				max-width: 100%;
+			}
+		}
+	}
 }
 
 // ≥768px
@@ -356,4 +397,17 @@
 			font-size: em(20px);
 		}
 	} 
+
+	//! Case content
+	.case-content {
+		padding: 40px 10px;
+
+		&__title, strong {
+			font-size: em(30px);
+		}
+
+		p {
+			font-size: em(20px);
+		}
+	}
 }
