--- a/TTC/scss/reset.scss
+++ b/TTC/scss/reset.scss
@@ -4,7 +4,7 @@
     border: 0;
     box-sizing: border-box !important;
     outline: none;
-    font-family: "Open Sans";
+    font-family: "Raleway", sans-serif;
 }
 
 body {
