--- a/TTC/scss/_media.scss
+++ b/TTC/scss/_media.scss
@@ -126,6 +126,10 @@
 	    }  
 	}
 
+	p.section-text {
+	    margin-top: 70px;
+	}
+
 	// Card
 	.card {
 		margin-top: 70px;
@@ -268,6 +272,10 @@
 	    }  
 	}
 
+	p.section-text {
+	    margin-top: 50px;
+	}
+
 	// Card
 	.card {
 		margin-top: 50px;
@@ -288,6 +296,10 @@
 	// Assortment, features
 	.assortment, .features, .feedback {
 		margin-top: 70px;
+	}
+
+	.partners {
+		margin-top: 50px;
 	}
 
 	// Feedback
