--- a/TTC/scss/_media.scss
+++ b/TTC/scss/_media.scss
@@ -298,7 +298,8 @@
 		margin-top: 70px;
 	}
 
-	.partners, .about {
+	// Partners, about, contact
+	.partners, .about, .contact {
 		margin-top: 50px;
 	}
 
