--- a/TTC/scss/sections/header.scss
+++ b/TTC/scss/sections/header.scss
@@ -9,7 +9,7 @@
         border-bottom: 1px solid silver;
 
         .header__body {
-            padding: 15px 0;
+            padding: 15px 30px;
         }
     }
 
