--- a/TTC/scss/sections/main-page.scss
+++ b/TTC/scss/sections/main-page.scss
@@ -3,6 +3,6 @@
 	@include flexbox(flex-start, center, column);
 }
 
-.partners, .about, .contact {
+.partners, .about, .contact, .soft {
 	margin-top: 100px;
 }
