--- a/TTC/scss/_media.scss
+++ b/TTC/scss/_media.scss
@@ -213,6 +213,11 @@
 	        margin-top: 10px;
 	    }
 	}
+
+	// Cloth 
+	.cloth {
+	    height: 350px;
+	}
 }
 
 // ≥576px
@@ -304,8 +309,8 @@
 		margin-top: 70px;
 	}
 
-	// Partners, about, contact soft
-	.partners, .about, .contact, .soft {
+	// Partners, about, contact, soft, clothes
+	.partners, .about, .contact, .soft, .clothes {
 		margin-top: 50px;
 	}
 
