--- a/TTC/scss/sections/components.scss
+++ b/TTC/scss/sections/components.scss
@@ -1,3 +1,11 @@
+// Cloth
+.cloth {
+    height: 450px;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+}
+
 // Map container
 .map-container {
     position:relative;
@@ -8,7 +16,6 @@
         width: 100%;
     }
 }
-
 
 // Feedback
 .feedback {
