--- a/Diaz/scss/_media.scss
+++ b/Diaz/scss/_media.scss
@@ -127,7 +127,7 @@
         &__img {
             max-width: 300px;
             height: auto;
-            display: block;
+            width: 100%;
         }
     }
 
