--- a/Diaz/scss/sections/components.scss
+++ b/Diaz/scss/sections/components.scss
@@ -102,7 +102,7 @@
 
     i {
         position: absolute;
-        margin-left: 15px;
+        right: 35px;
         top: 50%;
         transform: translateY(-50%);
     }
