--- a/Diaz/scss/sections/components.scss
+++ b/Diaz/scss/sections/components.scss
@@ -91,7 +91,7 @@
 // Blue
 .blue-btn {
     position: relative;
-    display: table;
+    display: block;
     background: #7FA0CD;
     color: #fff;
     font-family: 'Futura PT', sans-serif;
