--- a/Diaz/scss/_media.scss
+++ b/Diaz/scss/_media.scss
@@ -111,6 +111,10 @@
     .start-banner {
         padding: 30px 0;
 
+        &__content {
+            @include flexbox(flex-start, flex-start, column);
+        }
+
         h2 {
             font-size: em(40px);
         }
