--- a/Diaz/scss/main.scss
+++ b/Diaz/scss/main.scss
@@ -14,6 +14,10 @@
     padding: 130px 0;
     position: relative;
 
+    &__content {
+        @include flexbox(flex-start, flex-start, column);
+    }
+
     h2 {
         font-family: 'Pribambas', sans-serif;
         font-size: em(45px);
