--- a/Diaz/scss/_media.scss
+++ b/Diaz/scss/_media.scss
@@ -148,6 +148,10 @@
 
     //! About
     .about {
+        .video-container {
+            height: 350px;
+        }
+
         // Testimonial 
         .testimonial {
             margin-top: 100px;
