--- a/Diaz/scss/_media.scss
+++ b/Diaz/scss/_media.scss
@@ -148,9 +148,9 @@
 
     //! About
     .about {
-        .video-container {
-            height: 350px;
-        }
+        // .video-container {
+        //     height: 350px;
+        // }
 
         // Testimonial 
         .testimonial {
