--- a/Diaz/scss/main.scss
+++ b/Diaz/scss/main.scss
@@ -136,12 +136,17 @@
 // About
 .about {
     .video-container {
-        @include box(100%, 700px);
-        @include flexbox(center, center);
+        position: relative;
+        height: 0;
+        padding-bottom: 56.25%;
         border: 5px solid #7fa0cd;
 
         iframe {
-            @include box(100%);
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
         }
     }
 
