--- a/Diaz/scss/sections/footer.scss
+++ b/Diaz/scss/sections/footer.scss
@@ -1,3 +1,20 @@
 footer {
-    
+    padding: 25px 0;
+    background-color: #C1D5F1;
+
+    .links {
+        @include flexbox(flex-start, flex-start, column);
+
+        a + a {
+            margin-top: 10px;
+        }
+
+        a {
+            color: #1f1f1f;
+            text-decoration: underline;
+            font-family: 'Futura PT', sans-serif;
+            font-size: em(18px);
+            letter-spacing: 1px;
+        }
+    }
 }
