--- a/Diaz/scss/_media.scss
+++ b/Diaz/scss/_media.scss
@@ -296,4 +296,12 @@
             }
         }
     }
+
+    
+    //! Projects
+    .projects {  
+        .project {
+            height: 250px;
+        }
+    } 
 }
