--- a/Diaz/scss/_media.scss
+++ b/Diaz/scss/_media.scss
@@ -116,6 +116,13 @@
             }
         }
     } 
+
+    //! Projects
+    .projects {   
+        .project {
+            height: 250px;
+        }
+    } 
 }
 
 // ≥768px
@@ -208,7 +215,7 @@
         .project {
             margin: 10px 0;
             width: 100%;
-            height: 250px;
+            height: 350px;
         }
     } 
 
@@ -297,4 +304,11 @@
             }
         }
     }
+
+    //! Projects
+    .projects {   
+        .project {
+            height: 250px;
+        }
+    } 
 }
