--- a/ogncy_onelove/scss/sections/header.scss
+++ b/ogncy_onelove/scss/sections/header.scss
@@ -6,6 +6,7 @@
     border-bottom: 1px solid #e0e0e0;
 
     &.fixed {
+        top: 0;
         position: fixed;
         z-index: 888;
         padding: 20px 0;
