--- a/ogncy_onelove/scss/sections/main-page.scss
+++ b/ogncy_onelove/scss/sections/main-page.scss
@@ -95,6 +95,7 @@
             top: 0;
             right: 0;
             width: 670px;
+            display: block;
             transition: all .7s ease;
         }
 
