--- a/ogncy_onelove/scss/_media.scss
+++ b/ogncy_onelove/scss/_media.scss
@@ -432,11 +432,11 @@
 
     //! Start section
     .start-section {
-        // &-imgs {
-        //     img {
-        //         max-width: 300px;
-        //     }
-        // }
+        &-imgs {
+            img {
+                max-width: 300px;
+            }
+        }
 
         &__title {
             font-size: em(40px);
