--- a/ogncy_onelove/scss/_media.scss
+++ b/ogncy_onelove/scss/_media.scss
@@ -387,6 +387,10 @@
             padding: 10px;
         }
 
+        &.logo {
+            line-height: 35px;
+        }
+
         &-btns {
             flex-wrap: wrap;
         }
