--- a/ogncy_onelove/scss/sections/footer.scss
+++ b/ogncy_onelove/scss/sections/footer.scss
@@ -1,6 +1,10 @@
 .footer {
+    .logo {
+        line-height: 35px;
+    }
+
     .soc-link {
-        margin-top: 25px;
+        margin-top: 10px;
     }
 
     &-menu {
