--- a/ogncy_onelove/scss/sections/header.scss
+++ b/ogncy_onelove/scss/sections/header.scss
@@ -14,6 +14,7 @@
     
     &.dark {
         background-color: #161618;
+        border-color: #161618;
 
         .logo, .soc-link, .btn-dark {
             color: #fff;
