--- a/ogncy_onelove/scss/sections/components.scss
+++ b/ogncy_onelove/scss/sections/components.scss
@@ -24,6 +24,14 @@
     }
 }
 
+@media (max-width: 1360px) and (min-width: 1201px) {
+    .scroll-to-top-btn {
+        right: 20px;
+        bottom: 10px;
+        @include box(50px);
+    }
+}
+
 //! For header and footer
 .logo {
     font-family: 'JetBrains Mono', monospace;
