--- a/ogncy_onelove/scss/sections/footer.scss
+++ b/ogncy_onelove/scss/sections/footer.scss
@@ -1,10 +1,10 @@
 .footer {
-    .logo {
-        line-height: 35px;
-    }
+    // .logo {
+    //     line-height: 35px;
+    // }
 
     .soc-link {
-        margin-top: 10px;
+        margin-top: 20px;
     }
 
     &-menu {
