--- a/ogncy_onelove/scss/sections/header.scss
+++ b/ogncy_onelove/scss/sections/header.scss
@@ -16,8 +16,12 @@
         background-color: #161618;
         border-color: #161618;
 
-        .logo, .soc-link, .btn-dark {
+        .soc-link, .btn-dark {
             color: #fff;
+        }
+
+        .logo {
+            filter: invert(1);
         }
 
         .btn-dark {
