--- a/ogncy_onelove/scss/sections/main-page.scss
+++ b/ogncy_onelove/scss/sections/main-page.scss
@@ -82,7 +82,7 @@
             .text {
                 font-family: 'Montserrat', sans-serif;
                 font-size: em(24px);
-                // font-weight: bold;
+                font-weight: bold;
             }
         }
     }
