--- a/ogncy_onelove/scss/sections/components.scss
+++ b/ogncy_onelove/scss/sections/components.scss
@@ -6,17 +6,19 @@
     right: 50px;
     bottom: 40px;
     @include box(60px);
-    background: #bdbdbd;
-    box-shadow: 0px 0px 25px rgba(21, 80, 255, 0.3);
+    
     border-radius: 50%;
     transition: color .3s ease;
     transition: box-shadow .3s ease;
     transition: background-color .3s ease;
-
-    &:hover {
-        color: $blue;
+    color: $blue;
         background-color: #fff;
         box-shadow: 0px 0px 25px rgba(21, 80, 255, 0.6);
+
+    &:hover {
+        color: #000;
+        background: #bdbdbd;
+        box-shadow: 0px 0px 25px rgba(21, 80, 255, 0.3);
     }
 
     i {
@@ -34,13 +36,8 @@
 
 //! For header and footer
 .logo {
-    font-family: 'JetBrains Mono', monospace;
-    font-size: em(45px);
-    font-weight: bold;
-    letter-spacing: -2px;
-
-    span {
-        margin: -7px;
+    img {
+        max-width: 170px;
     }
 }
 
@@ -53,7 +50,6 @@
 } 
 
 .soc-link {
-    margin-top: 6px;
     margin-left: 30px;
     font-family: 'JetBrains Mono', monospace;
     font-size: em(14px);
